@@ -75,16 +75,18 @@ Copyright (C) 2008 Apple Inc. All Rights Reserved.
     <script src="leaves.js" type="text/javascript" charset="utf-8"></script>
     </head>
   <body>
-    <!-- The container is dynamically populated using the init function in leaves.js -->
-    <!-- Its dimensions and position are defined using its id selector in leaves.css -->
-    <div id="leafContainer"></div>
-    <!-- its appearance, dimensions, and position are defined using its id selector in leaves.css -->
-    <div id="message">
-      <p>
-        Fall leaves are beautiful…
-        <br>
-        on someone else&rsquo;s lawn.</p>
-      <p><em>Dino&rsquo;s Lawn Care</em><br><span class="phone">☎</span> 555-2143</p>
+    <div id="container">
+      <!-- The container is dynamically populated using the init function in leaves.js -->
+      <!-- Its dimensions and position are defined using its id selector in leaves.css -->
+      <div id="leafContainer"></div>
+      <!-- its appearance, dimensions, and position are defined using its id selector in leaves.css -->
+      <div id="message">
+        <p>
+          Fall leaves are beautiful…
+          <br>
+          on someone else&rsquo;s lawn.</p>
+        <p><em>Dino&rsquo;s Lawn Care</em><br><span class="phone">☎</span> 555-2143</p>
+      </div>
     </div>
   </body>
 </html>
